--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,20 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  body {
+    @apply bg-[#efefef];
+  }
+}
+
+@layer components {
+  .hoverAnimation {
+    @apply hover:bg-[#000] hover:bg-opacity-10 rounded-full cursor-pointer w-[52px] h-[52px] 
+    xl:w-auto xl:h-auto xl:py-3 xl:px-4 transition duration-200 ease-out
+  }
+}
+
 html,
 body {
   padding: 0;
