--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,11 +29,16 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 a {
   color: inherit;
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+*::-webkit-scrollbar {
+  display: none; /* for Chrome, Safari, and Opera */
 }
+
